# o7Debrief

./: .flake8  .gitignore  ARCHITECTURE.md  DEVELOPMENT-README.md  README.md  TESTING.md  buildexe.py  buildinstaller.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: debrief_taxonomy.toml
docs/: example-report.html  index.html  robots.txt  sitemap.xml  why.html
installer/: app.py
o7debrief/: __init__.py
o7debrief/application/: __init__.py  errors.py
o7debrief/application/dto/: __init__.py  debrief_view.py  export_result.py  preferences.py  rank_snapshot.py  render_request.py  update_status.py
o7debrief/application/ports/: __init__.py  clock.py  config_provider.py  debrief_archive.py  debrief_exporter.py  debrief_sink.py  journal_source.py  preferences_store.py  rank_snapshot_store.py  release_source.py
o7debrief/application/services/: __init__.py  auto_debrief_trigger.py  config_loading_service.py  debrief_builder.py  debrief_naming.py  (+12 more)
o7debrief/domain/: __init__.py  errors.py
o7debrief/infrastructure/: __init__.py
o7debrief/ui/: __init__.py
tests/: __init__.py  conftest.py
tests/application/: __init__.py  domain_builders.py  fakes.py  test_auto_debrief_trigger.py  test_config_loading_service.py  test_debrief_builder.py  test_debrief_export_service.py  test_debrief_presenter.py  test_dto_and_errors.py  test_label_resolver.py  test_one_shot_debrief_service.py  test_ports.py  test_presenter_death.py  test_presenter_missions_ops.py  test_presenter_slv.py  test_rank_analyzer.py  test_session_recorder.py  test_timeline_text_bounty.py  test_update_service.py  test_value_formatter.py  test_version_compare.py
tests/domain/: test_errors.py
tests/infrastructure/: __init__.py  test_end_to_end.py  test_file_journal_source.py  test_filesystem_debrief_archive.py  test_filesystem_sink.py  test_github_release_source.py  test_html_renderer.py  test_icons.py  test_json_preferences_store.py  test_json_rank_snapshot_store.py  test_markdown_renderer.py  test_toml_config_provider.py  test_windows_autostart.py
tests/structural/: __init__.py  test_composition_root.py  test_domain_purity.py  test_layering.py  test_loc_limits.py  test_no_magic_numbers.py
tests/ui/: __init__.py  conftest.py  fakes.py  test_about.py  test_home_dialog.py  test_licence.py  test_preview.py  test_recents_pager.py  test_session_view_model.py  test_settings.py  test_single_instance.py  test_splash.py  test_tray_controller.py  test_tray_home.py
tools/: capture_home_dialog.py  capture_tray_menu.py  generate_example_report.py  make_icon.py
(+88 files in other folders)
